--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -88,7 +88,7 @@
     </button>
     <button class="club-dashboard-btn club-dashboard-btn-secondary">
       <i class="fa-solid fa-address-book"></i>
-      <a href="/clubs/update_leader"> Manage Your Leaders</a>
+      <a href="/clubs/update_leader" style="text-decoration: none; color: white;"> Manage Your Leaders</a> 
     </button>
   </div>
 
